# getargv-sys

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
docs_shim/: stdio.h
docs_shim/sys/: types.h
src/: lib.rs
