[package]
name = "getargv-sys"
links = "getargv"
version = "0.5.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
authors = ["CamJN <getargv@narzt.cam>"]
homepage = "https://getargv.narzt.cam/"
documentation = "https://docs.rs/getargv-sys"
repository = "https://github.com/getargv/getargv-sys/"
description = "FFI bindings for libgetargv on macOS"
categories = ["external-ffi-bindings", "os::macos-apis"]
keywords = ["argv", "arguments", "macOS", "KERN_PROCARGS2", "sysctl"]

[build-dependencies]
bindgen = "~0.63.0"

[build-dependencies.goblin]
version = "~0.6.1"
features = ["mach64","std"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
