[package]
name = "getargv-sys"
links = "getargv"
version = "0.5.7"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
readme = "README.md"
authors = ["CamJN <getargv@narzt.cam>"]
homepage = "https://getargv.narzt.cam/"
documentation = "https://docs.rs/getargv-sys"
repository = "https://github.com/getargv/getargv-sys/"
description = "FFI bindings for libgetargv on macOS"
categories = ["external-ffi-bindings", "os::macos-apis"]
keywords = ["argv", "arguments", "macOS", "KERN_PROCARGS2", "sysctl"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[build-dependencies]
bindgen = "~0.71.1"

[build-dependencies.goblin]
version = "~0.9.3"
features = ["mach64","std"]
